[project]
name = "supportbank"
version = "0.1.0"
description = ""
authors = [
    {name = "Ana Toader",email = "ana.toader@softwire.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
